--- a/src/assets/styles/cmps/StayImgs.scss
+++ b/src/assets/styles/cmps/StayImgs.scss
@@ -2,7 +2,7 @@
     display: grid;
     gap: 8px;
     grid-template-columns: 1fr 1fr;
-    height: 503px;
+    height: 446.389px;
     color: #FFFFFF;
     width: 100%;
     padding-top: 24px;
@@ -15,10 +15,10 @@
 .img1 {
     grid-row: 1 / 3;
     grid-column: 1 / 2;
-    // width: 100%;
-    // height: 100%;
-    width: 560px;
-    height: 503px;
+    width: 100%;
+    height: 100%;
+    // width: 560px;
+    // height: 503px;
     object-fit: cover;
     border-radius: 20px 0 0 20px;
 }
